Add ConnectionEvent
